// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminBar renders correctly 1`] = `
<Flex
  className="groupAdminLinks"
>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <DropdownContent
          group={
            Object {
              "duotoneUrl": Object {
                "large": "http://a.b",
                "small": "http://a.b",
              },
              "event_sample": Array [],
              "group_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "id": 1234,
              "key_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "link": "http://example.com/fake-hq-faff",
              "members": 999,
              "name": "fake HQ FAFF",
              "organizer": Object {
                "bio": "Org bio lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu tellus sit amet erat blandit volutpat.",
                "id": 164510652,
                "name": "Grayson Cheese",
                "photo": Object {
                  "base_url": "http://photos1.dev.meetupstatic.com",
                  "highres_link": "http://photos1.dev.meetupstatic.com/photos/member/a/c/7/b/highres_257204155.jpeg",
                  "id": 257204155,
                  "photo_link": "http://photos1.dev.meetupstatic.com/photos/member/a/c/7/b/member_257204155.jpeg",
                  "thumb_link": "http://photos1.dev.meetupstatic.com/photos/member/a/c/7/b/thumb_257204155.jpeg",
                  "type": "member",
                },
              },
              "photo_gradient": Object {
                "dark_color": "a",
                "light_color": "b",
              },
              "plain_text_description": "Plain text description lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu tellus sit amet erat blandit volutpat. Suspendisse tincidunt pulvinar vehicula. Mauris eget tristique mi. Ut tincidunt, ante eget aliquet eleifend, ligula lorem elementum felis, quis consectetur sapien justo ut eros. Maecenas tempus lacus metus, eu pretium massa convallis vitae. Donec id fringilla orci. Nunc eget elementum massa. Pellentesque pulvinar ipsum porta finibus laoreet. Donec pharetra quis nunc in auctor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Nulla eget nibh quis nisi commodo accumsan. Donec sed suscipit justo. Aliquam erat volutpat. Nunc a nulla massa. Curabitur at elit eu neque congue fermentum",
              "timezone": "Europe/London",
              "urlname": "fake-hq-faff",
              "who": "Faffers",
            }
          }
          host="dev.meetup.com"
        />
      }
      direction="top"
      id="admin-label-btn"
      minWidth="100px"
      noPortal={true}
      trigger={
        <Button
          icon="settings"
          id="admin-label-btn"
        >
          Admin
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <Section>
          <Select
            name="highlightValue"
            onChange={[Function]}
            value="1"
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="lowlight"
            >
              lowlight
            </option>
          </Select>
          <a
            className="button margin--bottom"
            onClick={[Function]}
          >
            submit
          </a>
        </Section>
      }
      direction="top"
      id="highlight-label-btn"
      isActive={false}
      minWidth="0px"
      noPortal={true}
      trigger={
        <Button
          id="highlight-label-btn"
        >
          Highlight 
          1
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
</Flex>
`;

exports[`AdminBar renders correctly when QLd 1`] = `
<Flex
  className="groupAdminLinks greenbar"
>
  <FlexItem
    className="inverted padding--top-half"
  >
    <p
      className="text--display3"
    >
      QL:
       
      <a
        className="link"
        href="https://admin.dev.meetup.com/admin/member.jsp?m=undefined"
        rel="noopener noreferrer"
        target="_blank"
      >
        testing name
      </a>
    </p>
  </FlexItem>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <DropdownContent
          group={
            Object {
              "duotoneUrl": Object {
                "large": "http://a.b",
                "small": "http://a.b",
              },
              "event_sample": Array [],
              "group_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "id": 1234,
              "key_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "link": "http://example.com/fake-hq-faff",
              "members": 999,
              "name": "fake HQ FAFF",
              "photo_gradient": Object {
                "dark_color": "a",
                "light_color": "b",
              },
              "plain_text_description": "Plain text description lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu tellus sit amet erat blandit volutpat. Suspendisse tincidunt pulvinar vehicula. Mauris eget tristique mi. Ut tincidunt, ante eget aliquet eleifend, ligula lorem elementum felis, quis consectetur sapien justo ut eros. Maecenas tempus lacus metus, eu pretium massa convallis vitae. Donec id fringilla orci. Nunc eget elementum massa. Pellentesque pulvinar ipsum porta finibus laoreet. Donec pharetra quis nunc in auctor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Nulla eget nibh quis nisi commodo accumsan. Donec sed suscipit justo. Aliquam erat volutpat. Nunc a nulla massa. Curabitur at elit eu neque congue fermentum",
              "timezone": "Europe/London",
              "urlname": "fake-hq-faff",
              "who": "Faffers",
            }
          }
          host="dev.meetup.com"
        />
      }
      direction="top"
      id="admin-label-btn"
      minWidth="100px"
      noPortal={true}
      trigger={
        <Button
          icon="settings"
          id="admin-label-btn"
        >
          Admin
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <Section>
          <Select
            name="highlightValue"
            onChange={[Function]}
            value="1"
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="lowlight"
            >
              lowlight
            </option>
          </Select>
          <a
            className="button margin--bottom"
            onClick={[Function]}
          >
            submit
          </a>
        </Section>
      }
      direction="top"
      id="highlight-label-btn"
      isActive={false}
      minWidth="0px"
      noPortal={true}
      trigger={
        <Button
          id="highlight-label-btn"
        >
          Highlight 
          1
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
</Flex>
`;

exports[`AdminBar renders correctly when isProdApi 1`] = `
<Flex
  className="groupAdminLinks redbar"
>
  <FlexItem
    className="inverted padding--top-half"
  >
    <p
      className="text--display4"
    >
      You are using production data.
    </p>
  </FlexItem>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <DropdownContent
          group={
            Object {
              "duotoneUrl": Object {
                "large": "http://a.b",
                "small": "http://a.b",
              },
              "event_sample": Array [],
              "group_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "id": 1234,
              "key_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "link": "http://example.com/fake-hq-faff",
              "members": 999,
              "name": "fake HQ FAFF",
              "photo_gradient": Object {
                "dark_color": "a",
                "light_color": "b",
              },
              "plain_text_description": "Plain text description lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu tellus sit amet erat blandit volutpat. Suspendisse tincidunt pulvinar vehicula. Mauris eget tristique mi. Ut tincidunt, ante eget aliquet eleifend, ligula lorem elementum felis, quis consectetur sapien justo ut eros. Maecenas tempus lacus metus, eu pretium massa convallis vitae. Donec id fringilla orci. Nunc eget elementum massa. Pellentesque pulvinar ipsum porta finibus laoreet. Donec pharetra quis nunc in auctor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Nulla eget nibh quis nisi commodo accumsan. Donec sed suscipit justo. Aliquam erat volutpat. Nunc a nulla massa. Curabitur at elit eu neque congue fermentum",
              "timezone": "Europe/London",
              "urlname": "fake-hq-faff",
              "who": "Faffers",
            }
          }
          host="meetup.com"
        />
      }
      direction="top"
      id="admin-label-btn"
      minWidth="100px"
      noPortal={true}
      trigger={
        <Button
          icon="settings"
          id="admin-label-btn"
        >
          Admin
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <Section>
          <Select
            name="highlightValue"
            onChange={[Function]}
            value="1"
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="lowlight"
            >
              lowlight
            </option>
          </Select>
          <a
            className="button margin--bottom"
            onClick={[Function]}
          >
            submit
          </a>
        </Section>
      }
      direction="top"
      id="highlight-label-btn"
      isActive={false}
      minWidth="0px"
      noPortal={true}
      trigger={
        <Button
          id="highlight-label-btn"
        >
          Highlight 
          1
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
</Flex>
`;

exports[`AdminBar renders correctly when no org exists 1`] = `
<Flex
  className="groupAdminLinks"
>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <DropdownContent
          group={
            Object {
              "duotoneUrl": Object {
                "large": "http://a.b",
                "small": "http://a.b",
              },
              "event_sample": Array [],
              "group_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "id": 1234,
              "key_photo": Object {
                "id": 1234,
                "photo_link": "http://placekitten.com/400/300",
                "thumb_link": "http://placekitten.com/400/300",
              },
              "link": "http://example.com/fake-hq-faff",
              "members": 999,
              "name": "fake HQ FAFF",
              "photo_gradient": Object {
                "dark_color": "a",
                "light_color": "b",
              },
              "plain_text_description": "Plain text description lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu tellus sit amet erat blandit volutpat. Suspendisse tincidunt pulvinar vehicula. Mauris eget tristique mi. Ut tincidunt, ante eget aliquet eleifend, ligula lorem elementum felis, quis consectetur sapien justo ut eros. Maecenas tempus lacus metus, eu pretium massa convallis vitae. Donec id fringilla orci. Nunc eget elementum massa. Pellentesque pulvinar ipsum porta finibus laoreet. Donec pharetra quis nunc in auctor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti. Nulla eget nibh quis nisi commodo accumsan. Donec sed suscipit justo. Aliquam erat volutpat. Nunc a nulla massa. Curabitur at elit eu neque congue fermentum",
              "timezone": "Europe/London",
              "urlname": "fake-hq-faff",
              "who": "Faffers",
            }
          }
          host="dev.meetup.com"
        />
      }
      direction="top"
      id="admin-label-btn"
      minWidth="100px"
      noPortal={true}
      trigger={
        <Button
          icon="settings"
          id="admin-label-btn"
        >
          Admin
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
  <FlexItem
    shrink={true}
  >
    <Tooltip
      align="left"
      content={
        <Section>
          <Select
            name="highlightValue"
            onChange={[Function]}
            value="1"
          >
            <option
              value="1"
            >
              1
            </option>
            <option
              value="2"
            >
              2
            </option>
            <option
              value="3"
            >
              3
            </option>
            <option
              value="4"
            >
              4
            </option>
            <option
              value="5"
            >
              5
            </option>
            <option
              value="lowlight"
            >
              lowlight
            </option>
          </Select>
          <a
            className="button margin--bottom"
            onClick={[Function]}
          >
            submit
          </a>
        </Section>
      }
      direction="top"
      id="highlight-label-btn"
      isActive={false}
      minWidth="0px"
      noPortal={true}
      trigger={
        <Button
          id="highlight-label-btn"
        >
          Highlight 
          1
        </Button>
      }
      withClose={true}
    />
  </FlexItem>
</Flex>
`;

exports[`AdminBar renders nothing if user is not an admin and nodeEnv is prod 1`] = `""`;

exports[`AdminBar renders warning when nodeEnv is development and using isProdApi 1`] = `
<Flex
  className="groupAdminLinks redbar"
>
  <FlexItem
    className="inverted padding--top-half"
  >
    <p
      className="text--display4"
    >
      You are using production data.
    </p>
  </FlexItem>
</Flex>
`;
